--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.42.3",
+    "react-native-bluetooth-serial": "^1.0.0-rc1",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
